--- a/roles/config-tower/tasks/post-config-tower.yml
+++ b/roles/config-tower/tasks/post-config-tower.yml
@@ -1,25 +1,32 @@
 - name: Create Homework Assignment project
+  tower_project:
+    name: "{{ proj_name }}"
+    description: "Project containing homework"
+    state: present
+    tower_username: "{{ user_name }}"
+    tower_password: "{{ password }}"
+    organization: "{{ org_name }}"
+   # tower_config_file: "/root/.tower_cli.cfg"
 
-
-- name: Machine Credentail to connect to workstation using openstack.pub
+- name: Machine Credential to connect to workstation using openstack.pub
   tower_credential:
     name: Connect_to_workstation
     organization: Default
     state: present
     kind: ssh
     tower_host: tower1.{{tower_GUID}}.example.opentlc.com
-    tower_username: admin
-    tower_password: r3dh4t1!
+    tower_username: "{{ user_name }}"
+    tower_password: "{{ password }}"
     ssh_key_data: "/root/.ssh/openstack.pem"
     username: cloud-user
 
 - name: Create Inventory
   command: |
-    tower-cli inventory create -n "{{static_inventory_name}}" --organization "{{org_name}}"
+    tower-cli inventory create -n "{{static_inventory_name}}" --organization "{{org_name}}" -u "{{ user_name }}" -p "{{ password }}"
 
-- name: Create Group in static inventory 
+- name: Create Group in static inventory
   command: |
-    tower-cli group create --inventory "{{static_inventory_name}}"  --name {{group_name}}
+    tower-cli group create --inventory "{{static_inventory_name}}"  --name {{group_name}} -u "{{ user_name }}" -p "{{ password }}"
 
 
 - name: Add tower host
@@ -29,13 +36,13 @@
     inventory: "{{static_inventory_name}}"
     state: present
     tower_host: tower1.{{tower_GUID}}.example.opentlc.com
-    tower_username: admin
-    tower_password: r3dh4t1!
+    tower_username: "{{ user_name }}"
+    tower_password: "{{ password }}"
     tower_verify_ssl: no
 
-- name: Associate workstation host to group 
-  command: | 
-    tower-cli host associate --host "{{host_name}}" --group "{{group_name}}"
+- name: Associate workstation host to group
+  command: |
+    tower-cli host associate --host "{{host_name}}" --group "{{group_name}}" -u "{{ user_name }}" -p "{{ password }}"
 
 
 - name: Tower Creds key file
@@ -45,8 +52,8 @@
     state: present
     kind: ssh
     tower_host: tower1.{{tower_GUID}}.example.opentlc.com
-    tower_username: admin
-    tower_password: r3dh4t1!
+    tower_username: "{{ user_name }}"
+    tower_password: "{{ password }}"
     tower_verify_ssl: no
     ssh_key_data: /root/.ssh/mykey.pem
     username: "{{ opentlc_login }}"
