--- a/roles/config-tower/tasks/post-config-tower.yml
+++ b/roles/config-tower/tasks/post-config-tower.yml
@@ -6,7 +6,10 @@
     tower_username: "{{ user_name }}"
     tower_password: "{{ password }}"
     organization: "{{ org_name }}"
-   # tower_config_file: "/root/.tower_cli.cfg"
+    scm_url: https://github.com/Bodanel/nextgen_ansible_advanced_homework
+    scm_type: git
+    scm_update_on_launch: True
+    scm_update_cache_timeout: 60
 
 - name: Machine Credential to connect to workstation using openstack.pub
   tower_credential:
