--- a/roles/config-tower/tasks/post-config-tower.yml
+++ b/roles/config-tower/tasks/post-config-tower.yml
@@ -23,13 +23,17 @@
     ssh_key_data: "/root/.ssh/openstack.pem"
     username: cloud-user
 
+- name:  Create an authentication token which should be removed at the end of the role
+  command: |
+    tower-cli login "{{ user_name }}" --password "{{ password }}" 
+
 - name: Create Inventory
   command: |
-    tower-cli inventory create -n "{{static_inventory_name}}" --organization "{{org_name}}" -u "{{ user_name }}" -p "{{ password }}"
+    tower-cli inventory create -n "{{static_inventory_name}}" --organization "{{org_name}}" 
 
 - name: Create Group in static inventory
   command: |
-    tower-cli group create --inventory "{{static_inventory_name}}"  --name {{group_name}} -u "{{ user_name }}" -p "{{ password }}"
+    tower-cli group create --inventory "{{static_inventory_name}}"  --name {{group_name}} 
 
 
 - name: Add tower host
@@ -45,7 +49,7 @@
 
 - name: Associate workstation host to group
   command: |
-    tower-cli host associate --host "{{host_name}}" --group "{{group_name}}" -u "{{ user_name }}" -p "{{ password }}"
+    tower-cli host associate --host "{{host_name}}" --group "{{group_name}}" 
 
 
 - name: Tower Creds key file
