--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -1,3 +1,33 @@
 ---
 
 # tasks file for osp.servers
+- name: Create the QA servers on OSP
+  os_server:
+    cloud: openstack
+    name: "{{ item }}"
+    state: "{{ item }}.state"
+    image: "{{ item }}.image"
+    key_name: "{{ item }}.key_name"
+    flavor: "{{ item }}.flavor"
+    security_group: "{{ item }}.security_group"
+    delete_fip: yes
+    wait: no
+    nics:
+      - net-name: int_network
+    meta: "{{ item }}.meta"
+    userdata: |
+      #!/bin/bash
+      curl -o /tmp/openstack.pub http://www.opentlc.com/download/ansible_bootcamp/openstack_keys/openstack.pub
+      cat /tmp/openstack.pub >> /home/cloud-user/.ssh/authorized_keys
+  loop: 
+    - "{{ osp_servers }}"
+
+- name: "Adding floating ip to {{ item }}"
+  os_floating_ip:
+    cloud: openstack
+    state: present
+    reuse: yes
+    server: "{{ item }}"
+    network: ext_network
+    wait: true
+    timeout: 180
