provision QA env updated

--- a/roles/osp-servers/vars/main.yml
+++ b/roles/osp-servers/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 # vars file for osp.servers
 osp_servers:
-  frontend:
+  - instance_name:  frontend
     name: frontend
     state: present
     image: rhel-guest
@@ -10,7 +10,7 @@ osp_servers:
     security_group: frontend
     meta:
       - { group: frontends, deployment_name: QA}
-  app1:
+  - instance_name: app1
     name: app1
     state: present
     image: rhel-guest
@@ -19,7 +19,7 @@ osp_servers:
     security_group: apps
     meta:
       - { group: apps, deployment_name: QA}
-  app2:
+  - instance_name: app2
     name: app2
     state: present
     image: rhel-guest
@@ -28,7 +28,7 @@ osp_servers:
     security_group: apps
     meta:
       - { group: apps, deployment_name: QA}
-  db:
+  - instance_name: db
     name: db
     state: present
     image: rhel-guest
