--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -1,15 +1,18 @@
 ---
 
 # tasks file for osp.servers
+
+
 - name: Create the QA servers on OSP
   os_server:
     cloud: openstack
     name: "{{ item }}"
-    state: "{{ item }}.state"
+  #  state: "{{ item }}.state"
+    state: present
     image: "{{ item }}.image"
     key_name: "{{ item }}.key_name"
     flavor: "{{ item }}.flavor"
-    security_group: "{{ item }}.security_group"
+    security_groups: "{{ item }}.security_group"
     delete_fip: yes
     wait: no
     nics:
