--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -7,17 +7,16 @@
   os_server:
     cloud: openstack
     name: "{{ item }}"
-  #  state: "{{ item }}.state"
-    state: present
-    image: "{{ item }}.image"
-    key_name: "{{ item }}.key_name"
-    flavor: "{{ item }}.flavor"
-    security_groups: "{{ item }}.security_group"
+    state: "{{ item.state }}"
+    image: "{{ item.image }}"
+    key_name: "{{ item.key_name }}"
+    flavor: "{{ item.flavor }}"
+    security_groups: "{{ item.security_group }}"
     delete_fip: yes
     wait: no
     nics:
       - net-name: int_network
-    meta: "{{ item }}.meta"
+    meta: "{{ item.meta }}"
     userdata: |
       #!/bin/bash
       curl -o /tmp/openstack.pub http://www.opentlc.com/download/ansible_bootcamp/openstack_keys/openstack.pub
