--- a/roles/osp-servers/vars/main.yml
+++ b/roles/osp-servers/vars/main.yml
@@ -1,38 +1,38 @@
 ---
 # vars file for osp.servers
 osp_servers:
-  - instance_name:  frontend
+  frontend:
     name: frontend
     state: present
     image: rhel-guest
-    key_name: ansible_ssh
+  #  key_name: ansible_ssh
     flavor: m1.medium
     security_group: frontend
     meta:
       - { group: frontends, deployment_name: QA}
-  - instance_name: app1
+  app1:
     name: app1
     state: present
     image: rhel-guest
-    key_name: ansible_ssh
+   # key_name: ansible_ssh
     flavor: m1.medium
     security_group: apps
     meta:
       - { group: apps, deployment_name: QA}
-  - instance_name: app2
+  app2:
     name: app2
     state: present
     image: rhel-guest
-    key_name: ansible_ssh
+    #key_name: ansible_ssh
     flavor: m1.medium
     security_group: apps
     meta:
       - { group: apps, deployment_name: QA}
-  - instance_name: db
+  db:
     name: db
     state: present
     image: rhel-guest
-    key_name: ansible_ssh
+    #key_name: ansible_ssh
     flavor: m1.medium
     security_group: db
     meta:
