--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -30,7 +30,7 @@
     cloud: openstack
     state: present
     reuse: yes
-    server: "{{ item }}"
+    server: "{{ server.name }}"
     network: ext_network
     wait: true
     timeout: 180
