--- a/roles/config-tower/tasks/post-config-tower.yml
+++ b/roles/config-tower/tasks/post-config-tower.yml
@@ -6,7 +6,7 @@
     tower_username: "{{ user_name }}"
     tower_password: "{{ password }}"
     organization: "{{ org_name }}"
-    scm_url: https://github.com/Bodanel/nextgen_ansible_advanced_homework
+    scm_url: "{{ scm_url }}"
     scm_type: git
     scm_update_on_launch: True
     scm_update_cache_timeout: 60
@@ -20,8 +20,8 @@
     tower_host: tower1.{{tower_GUID}}.example.opentlc.com
     tower_username: "{{ user_name }}"
     tower_password: "{{ password }}"
-    ssh_key_data: "/root/.ssh/openstack.pem"
-    username: cloud-user
+    ssh_key_data: "{{ user_cred_path }}"
+    username: "{{ user_cred_name }}"
 
 #- name:  Create an authentication token which should be removed at the end of the role
 #  command: |
