--- a/roles/app-tier/tasks/main.yml
+++ b/roles/app-tier/tasks/main.yml
@@ -1,2 +1,7 @@
 ---
-
+- name: deploy httpd index.html file
+  template:
+    src: index.html.j2
+    dest: "{{ index_file }}"
+  notify:
+    - "start {{ payload }}"
