--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -2,8 +2,11 @@
   gather_facts: false
   tasks:
   - name: OpenStack servers
-  - name: Curl website
+    import_role:
+      name: osp-facts
 
+  - name: Curl website
+    
   - name: Fail if 'Ansible has done its job' is not in the page content
     fail:
     when: "'Ansible has done its job' not in webpage.results[0].content"
