Commented failed task when provisioning QA

--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -39,12 +39,12 @@
   loop_control:
     loop_var: server 
 
-- name: "Add the second public key"
-  authorized_key:
-    user: cloud-user
-    state: present
-    key: "{{ lookup('file', '/root/.ssh/mykey.pub') }}"
-  loop: "{{ osp_servers }}"
-  loop_control:
-    loop_var: server 
+#- name: "Add the second public key"
+#  authorized_key:
+#    user: cloud-user
+#    state: present
+#    key: "{{ lookup('file', '/root/.ssh/mykey.pub') }}"
+#  loop: "{{ osp_servers }}"
+#  loop_control:
+#    loop_var: server 
 
