--- a/site-3tier-app.yml
+++ b/site-3tier-app.yml
@@ -1,8 +1,8 @@
 - hosts: workstation
-  loop: "{{ osp_servers }}"
-  loop_control:
-    loop_var: server 
-
+#  loop: "{{ osp_servers }}"
+#  loop_control:
+#    loop_var: server 
+#
   gather_facts: true
   roles:
   - name: osp-facts
